feat(sys-kernel/x86_64_defconfig) enable EFI in the kernel build
This builds the kernel as an EFI image, allowing it to be booted
directly by UEFI bioses.  It also enables the efivars and efivarfs
modules so that EFI variables can be accessed properly when booted in
EFI mode.

--- a/eclass/cros-kernel/x86_64_defconfig
+++ b/eclass/cros-kernel/x86_64_defconfig
@@ -462,7 +462,8 @@ CONFIG_X86_PAT=y
 CONFIG_ARCH_USES_PG_UNCACHED=y
 CONFIG_ARCH_RANDOM=y
 CONFIG_X86_SMAP=y
-# CONFIG_EFI is not set
+CONFIG_EFI=y
+CONFIG_EFI_STUB=y
 CONFIG_SECCOMP=y
 CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_HZ_100 is not set
@@ -523,6 +524,7 @@ CONFIG_ACPI_CONTAINER=y
 # CONFIG_ACPI_SBS is not set
 CONFIG_ACPI_HED=m
 # CONFIG_ACPI_CUSTOM_METHOD is not set
+CONFIG_ACPI_BGRT=y
 # CONFIG_ACPI_APEI is not set
 # CONFIG_SFI is not set
 
@@ -2156,6 +2158,7 @@ CONFIG_FB_TILEBLITTING=y
 # CONFIG_FB_VGA16 is not set
 # CONFIG_FB_UVESA is not set
 CONFIG_FB_VESA=y
+CONFIG_FB_EFI=y
 # CONFIG_FB_N411 is not set
 # CONFIG_FB_HGA is not set
 # CONFIG_FB_S1D13XXX is not set
@@ -2585,6 +2588,13 @@ CONFIG_ISCSI_IBFT_FIND=y
 # CONFIG_GOOGLE_FIRMWARE is not set
 
 #
+# EFI (Extensible Firmware Interface) Support
+#
+CONFIG_EFI_VARS=m
+CONFIG_EFI_VARS_PSTORE=m
+# CONFIG_EFI_VARS_PSTORE_DEFAULT_DISABLE is not set
+
+#
 # File systems
 #
 CONFIG_DCACHE_WORD_ACCESS=y
@@ -2699,6 +2709,7 @@ CONFIG_PSTORE=y
 # CONFIG_SYSV_FS is not set
 # CONFIG_UFS_FS is not set
 # CONFIG_F2FS_FS is not set
+CONFIG_EFIVAR_FS=m
 CONFIG_AUFS_FS=y
 CONFIG_AUFS_BRANCH_MAX_127=y
 # CONFIG_AUFS_BRANCH_MAX_511 is not set
@@ -3177,3 +3188,4 @@ CONFIG_CLZ_TAB=y
 # CONFIG_DDR is not set
 CONFIG_MPILIB=y
 CONFIG_OID_REGISTRY=y
+CONFIG_UCS2_STRING=y
