fix(update-engine): respect the diskless parameters
update engine shouldn't run when we are diskless (for now)

--- a/coreos-base/update_engine/files/update-engine-reboot-manager.service
+++ b/coreos-base/update_engine/files/update-engine-reboot-manager.service
@@ -1,10 +1,7 @@
 [Unit]
-Description=Update Engine
-ConditionVirtualization=!container
+PartOf=update-engine.service
+Description=Update Engine Reboot Manager
 
 [Service]
 ExecStart=/usr/sbin/update_engine_reboot_manager
 Restart=always
-
-[Install]
-WantedBy=multi-user.target
