rename(pxe): Rename pxe services to a more generic "stub" name.
This makes the stub applicable to other diskless images we may add such
as bootable ISOs. Instead of relying on kernel command line options
switching between the real update_engine and the stub is now determined
by a /usr/.noupdate flag file we can include in our images.

--- a/systemd/update-engine-reboot-manager.service
+++ b/systemd/update-engine-reboot-manager.service
@@ -1,6 +1,8 @@
 [Unit]
-PartOf=update-engine.service
 Description=Update Engine Reboot Manager
+ConditionVirtualization=!container
+ConditionPathExists=!/usr/.noupdate
+PartOf=update-engine.service
 
 [Service]
 ExecStart=/usr/sbin/update_engine_reboot_manager
