fix(etcd+fleet): Add dependency on user-config.target
Since etcd and fleet are often configured by cloud configs they should
never start before the assorted calls to coreos-cloudinit finish.

--- a/app-admin/fleet/files/fleet.service
+++ b/app-admin/fleet/files/fleet.service
@@ -1,6 +1,8 @@
 [Unit]
 Description=fleet
 Wants=etcd.service
+Wants=user-config.target
+After=user-config.target
 
 [Service]
 ExecStart=/usr/bin/fleet
