--- a/coreos-base/oem-ec2-compat/files/cloud-config.yml
+++ b/coreos-base/oem-ec2-compat/files/cloud-config.yml
@@ -19,8 +19,9 @@ coreos:
         content: |
           [Unit]
           Description=Cloudinit from EC2-style metadata
-          Requires=coreos-setup-environment.service
-          After=coreos-setup-environment.service
+          Requires=system-config.target
+          After=system-config.target
+          Before=user-config.target
 
           [Service]
           Type=oneshot
