--- a/coreos-base/oem-gce/files/cloud-config.yml
+++ b/coreos-base/oem-gce/files/cloud-config.yml
@@ -16,8 +16,9 @@ coreos:
         runtime: yes
         content: |
           [Unit]
-          Requires=coreos-setup-environment.service
-          After=coreos-setup-environment.service
+          Requires=system-config.target
+          After=system-config.target
+          Before=user-config.target
 
           [Service]
           Type=oneshot
