--- a/systemd/update-engine.service
+++ b/systemd/update-engine.service
@@ -6,7 +6,7 @@ Wants=update-engine-reboot-manager.service
 
 [Service]
 Type=dbus
-BusName=org.chromium.UpdateEngine
+BusName=com.coreos.update1
 ExecStart=/usr/sbin/update_engine -foreground -logtostderr -no_connection_manager
 BlockIOWeight=100
 Restart=always
