--- a/app-emulation/docker/files/docker.service
+++ b/app-emulation/docker/files/docker.service
@@ -7,6 +7,8 @@ ExecStartPre=/bin/mount --make-rprivate /
 # Run docker but don't have docker automatically restart
 # containers. This is a job for systemd and unit files.
 ExecStart=/usr/bin/docker -d -r=false -H fd://
+LimitNOFILE=1048576
+LimitNPROC=1048576
 
 [Install]
 WantedBy=multi-user.target
