--- a/coreos-base/oem-ec2-compat/files/cloud-config.yml
+++ b/coreos-base/oem-ec2-compat/files/cloud-config.yml
@@ -15,7 +15,7 @@ coreos:
 
           [Service]
           Type=oneshot
-          ExecStart=/usr/bin/coreos-cloudinit --from-configdrive=/media/configdrive --from-metadata-service
+          ExecStart=/usr/bin/coreos-cloudinit --from-configdrive=/media/configdrive --from-metadata-service @@CONVERT_NETCONF@@
     oem:
       id: @@OEM_ID@@
       name: @@OEM_NAME@@
