--- a/coreos-base/oem-vmware/files/cloud-config.yml
+++ b/coreos-base/oem-vmware/files/cloud-config.yml
@@ -3,6 +3,18 @@ coreos:
     units:
       - name: vmtoolsd.service
         command: start
+
+    - name: vmware-set-dhcp-broadcast.service
+        command: restart
+        runtime: yes
+        content: |
+          [Unit]
+          Before=network.target
+
+          [Service]
+          Type=oneshot
+          StandardOutput=journal+console
+          ExecStart=/usr/share/oem/bin/vmware-set-dhcp-broadcast
     oem:
       id: vmware
       name: VMWare
