app-emulation/docker: add --insecure-registry flag
This is a temporary workaround to allow people to transistion into 1.3+
smoothly. This sets --insecure-registry=0.0.0.0/0 to maintain backward
compatibility.

--- a/app-emulation/docker/files/docker.service
+++ b/app-emulation/docker/files/docker.service
@@ -7,6 +7,7 @@ After=docker.socket
 [Service]
 Environment="TMPDIR=/var/tmp/"
 ExecStartPre=/bin/mount --make-rprivate /
+Environment=DOCKER_OPTS='--insecure-registry="0.0.0.0/0"'
 LimitNOFILE=1048576
 LimitNPROC=1048576
 # Run docker but don't have docker automatically restart
