app-emulation/docker: add $DOCKER_OPTS
This should have been done in f6ae1a34d144e3476fb9c31f3c6ff7df9c18c41c.

--- a/app-emulation/docker/files/docker.service
+++ b/app-emulation/docker/files/docker.service
@@ -12,7 +12,7 @@ LimitNOFILE=1048576
 LimitNPROC=1048576
 # Run docker but don't have docker automatically restart
 # containers. This is a job for systemd and unit files.
-ExecStart=/usr/bin/docker --daemon --storage-driver=btrfs --host=fd://
+ExecStart=/usr/bin/docker --daemon --storage-driver=btrfs --host=fd:// $DOCKER_OPTS
 
 [Install]
 WantedBy=multi-user.target
