--- a/app-emulation/docker/files/docker.service
+++ b/app-emulation/docker/files/docker.service
@@ -8,13 +8,13 @@ Requires=docker.socket early-docker.target
 Environment=TMPDIR=/var/tmp
 Environment=DOCKER_DRIVER=btrfs
 Environment=DOCKER_OPTS='--insecure-registry="0.0.0.0/0"'
-EnvironmentFile=-/run/docker_opts.env
+EnvironmentFile=-/run/flannel_docker_opts.env
 LimitNOFILE=1048576
 LimitNPROC=1048576
 ExecStartPre=/bin/mount --make-rprivate /
 # Run docker but don't have docker automatically restart
 # containers. This is a job for systemd and unit files.
-ExecStart=/usr/bin/docker --daemon --host=fd:// $DOCKER_OPTS
+ExecStart=/usr/bin/docker --daemon --host=fd:// $DOCKER_OPTS $DOCKER_OPT_BIP $DOCKER_OPT_MTU $DOCKER_OPT_IPMASQ
 
 [Install]
 WantedBy=multi-user.target
