connection_manager: remove all ConnectionManager related code
This mechanism was used to optionally disable updates of Chrome systems
connected over cellular networks. This isn't applicable to us and
touches a lot of code so time to clean it out.

After this HttpFetcher classes no longer need a reference to the global
SystemState so that plumbing has also been removed.

The external library, 'libchromeos' is no longer required.

--- a/systemd/update-engine.service
+++ b/systemd/update-engine.service
@@ -6,7 +6,7 @@ ConditionPathExists=!/usr/.noupdate
 [Service]
 Type=dbus
 BusName=com.coreos.update1
-ExecStart=/usr/sbin/update_engine -foreground -logtostderr -no_connection_manager
+ExecStart=/usr/sbin/update_engine -foreground -logtostderr
 BlockIOWeight=100
 Restart=always
 RestartSec=30
