--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,17 @@
 *.gcda
 *.gcno
 /*.pub.pem
+/.deps/
 /.sconsign.dblite
+/Makefile
+/Makefile.in
+/aclocal.m4
 /app.info
+/autom4te.cache/
+/build-aux/
+/config.log
+/config.status
+/configure
 /delta_generator
 /html/
 /marshal.glibmarshal.c
