gitignore: fix paths to generated code
Missed in commit 918a9d80a6d9932cccb6eb0b36f9c8e5c679dd3d

--- a/.gitignore
+++ b/.gitignore
@@ -25,13 +25,13 @@
 /configure
 /delta_generator
 /html/
-/marshal.glibmarshal.c
-/marshal.glibmarshal.h
+/src/update_engine/marshal.glibmarshal.c
+/src/update_engine/marshal.glibmarshal.h
+/src/update_engine/update_engine.dbusclient.h
+/src/update_engine/update_engine.dbusserver.h
+/src/update_engine/update_metadata.pb.cc
+/src/update_engine/update_metadata.pb.h
 /test_http_server
 /update_engine
-/update_engine.dbusclient.h
-/update_engine.dbusserver.h
 /update_engine_client
 /update_engine_unittests
-/update_metadata.pb.cc
-/update_metadata.pb.h
