--- a/Makefile.am
+++ b/Makefile.am
@@ -24,7 +24,7 @@ AM_CFLAGS = -fno-exceptions \
 	    -D__STDC_FORMAT_MACROS=1 \
 	    -D_FILE_OFFSET_BITS=64 \
 	    $(GLIB_CFLAGS) $(DEPS_CFLAGS)
-AM_CXXFLAGS = $(AM_CFLAGS)
+AM_CXXFLAGS = $(AM_CFLAGS) -std=gnu++11
 LDADD = $(GLIB_LIBS) $(DEPS_LIBS)
 
 if ENABLE_DEBUG
