--- a/Makefile.am
+++ b/Makefile.am
@@ -66,6 +66,7 @@ update_engine_client_SOURCES = src/update_engine/update_engine_client.cc
 libupdate_engine_a_SOURCES = \
 	src/strings/string_number_conversions.cc \
 	src/strings/string_printf.cc \
+	src/strings/string_split.cc \
 	src/update_engine/action_processor.cc \
 	src/update_engine/bzip.cc \
 	src/update_engine/bzip_extent_writer.cc \
@@ -117,6 +118,7 @@ update_engine_unittests_SOURCES = \
 	src/update_engine/testrunner.cc \
 	src/strings/string_number_conversions_unittest.cc \
 	src/strings/string_printf_unittest.cc \
+	src/strings/string_split_unittest.cc \
 	src/update_engine/action_pipe_unittest.cc \
 	src/update_engine/action_processor_unittest.cc \
 	src/update_engine/action_unittest.cc \
