--- a/Makefile.am
+++ b/Makefile.am
@@ -64,6 +64,7 @@ update_engine_client_LDADD = libupdate_engine.a $(LDADD)
 update_engine_client_SOURCES = src/update_engine/update_engine_client.cc
 
 libupdate_engine_a_SOURCES = \
+	src/files/scoped_file.cc \
 	src/strings/string_number_conversions.cc \
 	src/strings/string_printf.cc \
 	src/strings/string_split.cc \
